--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ python:
 # # - pip install coverage
 # # - pip install python-coveralls
 #
-# script:
-#  - python3 ./test.py
+script:
+ - python3 ./test.py
